--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,9 @@
 				<include src="./partials/services.html"></include>
 				<include src="./partials/works.html"></include>
 			</main>
-			<!-- <footer class="footer"> -->
-			<!-- <include src="./partials/footer.html"></include> -->
-			<!-- </footer> -->
+			<footer class="footer">
+				<include src="./partials/footer.html"></include>
+			</footer>
 		</div>
 	</body>
 </html>
