--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
 			<footer class="footer">
 				<include src="./partials/footer.html"></include>
 			</footer>
+			<include src="./partials/modal.html"></include>
 		</div>
 	</body>
 </html>
